--- a/quickstart/commands.yaml
+++ b/quickstart/commands.yaml
@@ -2,12 +2,10 @@
 
 generic_commands:
    commands: |
-      show chassis routing-engine
-      show system processes extensive
-      show route summary
-      show interfaces extensive
-      show interfaces diagnostics optics
-   tags: junos
+           show network-instance default protocol BGP default all-neighbor * afi-safi l2vpn-evpn | select state session-state
+           show network-instance default protocol BGP default rib afi-safi L2VPN_EVPN loc-rib route | select state path-types
+           show network-instance vlan* l2rib mac-entries | tab 
+   tags: arcos
 
 # Do not remove this three dashes (“---”) they are used to separate documents
 ---
