--- a/quickstart/credentials.yaml
+++ b/quickstart/credentials.yaml
@@ -1,6 +1,6 @@
 lab_credentials:
     username: root
-    password: <password>
+    password: arcos
     method: password
     key_file:
-    tags: test
+    tags: arcos
