--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   db:
-    image: influxdb:1.6.2-alpine
+    image: influxdb:alpine
     environment:
       - INFLUXDB_DB=py-mc
     ports:
       - 8086:8086
 
   telegraf:
-    image: telegraf:1.7.3-alpine
+    image: telegraf:alpine
     volumes:
       - ./quickstart/telegraf.conf:/etc/telegraf/telegraf.conf
     ports:
@@ -23,8 +23,8 @@ services:
       - metric-collector
       - --commands=commands.yaml
       - --start
-      - --credentials=${CREDENTIALS:-credentials.yaml}
-      - --hosts=${HOSTS:-hosts.yaml}
+      - --credentials=credentials.yaml
+      - --hosts=hosts.yaml
       - --output-type=http
       - --output-addr=http://telegraf:8186/write
       - --use-scheduler
@@ -40,7 +40,9 @@ services:
     image: grafana/grafana:5.1.0
     volumes:
       - ./quickstart/grafana/datasources:/etc/grafana/provisioning/datasources
-      - ./quickstart/grafana/dashboards:/etc/grafana/provisioning/dashboards
+        #- ./quickstart/grafana/dashboards:/etc/grafana/provisioning/dashboards
     ports:
       - "3000:3000"
+    depends_on:
+      - db
 
