--- a/hosts.yaml
+++ b/hosts.yaml
@@ -12,5 +12,12 @@ leaf2:
   context: 
     - site: sitea
     - role: router
+leaf3:
+  tags: [ arcos, router ]
+  address: 1.1.1.3
+  device_type: arcos
+  context: 
+    - site: sitea
+    - role: router
 
 
