--- a/quickstart/hosts.yaml
+++ b/quickstart/hosts.yaml
@@ -1,17 +1,21 @@
-device1:
-  tags: [ junos, router ]
-  address: 192.168.0.1
+leaf1:
+  tags: [ arcos, router ]
+  address: 1.1.1.1
+  device_type: arcos
   context: 
     - site: sitea
     - role: router
-
-device2:
-  tags: [ junos, switch ]
-  address: 192.168.0.2
+leaf2:
+  tags: [ arcos, router ]
+  address: 1.1.1.2
+  device_type: arcos
   context: 
-    - site: siteb
-    - role: switch
-
-device3:
-  tags: [ junos ]
-  address: 192.168.0.3
+    - site: sitea
+    - role: router
+leaf3:
+  tags: [ arcos, router ]
+  address: 1.1.1.3
+  device_type: arcos
+  context:
+    - site: sitea
+    - role: router
