--- a/quickstart/telegraf.conf
+++ b/quickstart/telegraf.conf
@@ -7,13 +7,10 @@ database = "py-mc"
 urls = ["http://db:8086"]
 write_consistency = "all"
 
-[inputs.http_listener]
+[inputs.influxdb_listener]
   ## Address and port to host HTTP listener on
   service_address = ":8186"
 
   ## timeouts
   read_timeout = "10s"
   write_timeout = "10s"
-
-[[processors.regex]]
-  namepass = ["jnpr_interface_error", "jnpr_interface_optics", "jnpr_interface_stat", "jnpr_interface_queue_stat"]
